# 202602g_GDG_Build_with_AI

./: README.md  impl_context.md  troubleshooting.md
docs/: Build_with_AI_Vibe_prototyping.md  Graph Designer ADK Agent - Antigravity Chat.md  Graph_Designer_ADK_Agent_Implementation_Plan.md
examples/: 입력_예시.md
graph-designer-agent/: .env.example  .gitignore  ADK_USAGE.md  README.md  agent.yaml  pyproject.toml
graph-designer-agent/examples/: lgu_telecom_plan.md  sample_ddl.sql
graph-designer-agent/main_agent/: root_agent.yaml  sub_agents
graph-designer-agent/main_agent/.adk/: session.db
graph-designer-agent/main_agent/prompts/: system.md
graph-designer-agent/prompts/: system.md
graph-designer-agent/scripts/: cleanup_spanner.sh  query_spanner.py  query_spanner.sh  setup_spanner.sh  show_spanner.sh
graph-designer-agent/sub_agents/schema_designer/: agent.yaml  root_agent.yaml
graph-designer-agent/sub_agents/schema_designer/prompts/: system.md
graph-designer-agent/sub_agents/schema_designer/tools/: mermaid_renderer.py
graph-designer-agent/sub_agents/spanner_deployer/: agent.yaml  root_agent.yaml
graph-designer-agent/sub_agents/spanner_deployer/prompts/: system.md
graph-designer-agent/sub_agents/spanner_deployer/tools/: spanner_client.py
